--- a/CamScanner/templates/index.html
+++ b/CamScanner/templates/index.html
@@ -1,10 +1,19 @@
+{% load static %}
 <html>
   <head>
     <title>Pi Video Surveillance</title>
+    <link rel="stylesheet" href="{% static 'Scan/Scan.css' %}">
+    <style>
+#test {
+text-align: center;
+}
+</style>
   </head>
   <body>
     <h1>Camscan</h1>
-    <img src="{% url 'stream' %}">
+    <div  id="test">
+        <img src="{% url 'stream' %}">
+    </div>
     <form action="{% url 'capture' %}">
     <input type="submit" value="Capture" />
 </form>
