--- a/CamScanner/templates/final.html
+++ b/CamScanner/templates/final.html
@@ -1,23 +1,72 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
+
 <head>
-  <link rel="stylesheet" href="{% static 'Scan/Scan.css' %}">
+    <link rel="stylesheet" type="text/css "href="{% static 'Scan/Scan.css' %}">
   <style>
 #test {
 text-align: center;
 }
+.header {
+  padding: 10px;
+  background: black;
+  color: white;
+  font-size: 17px;
+  margin-bottom:40px;
+}
+.inc
+{
+  font-size: 200%;
+  line-height: 0
+}
+.down
+{
+  margin-bottom:5px;
+}
+.center {
+  margin: 0;
+  position: absolute;
+  top: 900px;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+.centerq {
+  margin: 0;
+  position: absolute;
+  top: 850px;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+.but {
+  background-color: black; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
 </style>
+
 </head>
+
 <body>
+  <div class="header">
+    <p class="down"><span class="inc">C</span>amScan  &nbsp;    Documentation<p>
+  </div>
+
   <div  id="test">
     <img src="data:image/png;base64, {{ img }}"></img>
   </div>
     <form action="{% url 'download' %}">
-    <input type="submit" value="download" />
+    <span class="center"><input class="but"type="submit" value="download" /></span>
     </form>
     <form action="{% url 'html_render' %}">
-    <input type="submit" value="back" />
+    <span class="centerq"><input class="but" type="submit" value="One more!" /></span>
     </form>
   </body>
 </html>
