--- a/CamScanner/templates/index.html
+++ b/CamScanner/templates/index.html
@@ -1,21 +1,61 @@
 {% load static %}
 <html>
+
   <head>
     <title>Pi Video Surveillance</title>
-    <link rel="stylesheet" href="{% static 'Scan/Scan.css' %}">
+    <link rel="stylesheet" type="text/css "href="{% static 'Scan/Scan.css' %}">
     <style>
 #test {
 text-align: center;
 }
+.header {
+  padding: 10px;
+  background: black;
+  color: white;
+  font-size: 17px;
+  margin-bottom:40px;
+}
+.inc
+{
+  font-size: 200%;
+  line-height: 0
+}
+.down
+{
+  margin-bottom:5px;
+}
+.but {
+  background-color: black; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+.center {
+  margin: 0;
+  position: absolute;
+  top: 900px;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
 </style>
+
   </head>
   <body>
-    <h1>Camscan</h1>
+
+    <div class="header">
+      <p class="down"><span class="inc">C</span>amScan  &nbsp;    Documentation<p>
+    </div>
     <div  id="test">
         <img src="{% url 'stream' %}">
     </div>
     <form action="{% url 'capture' %}">
-    <input type="submit" value="Capture" />
+    <span class="center"><input class="but"  type="submit" value="Capture" /></span>
 </form>
+
   </body>
 </html>
