--- a/CamScanner/templates/index.html
+++ b/CamScanner/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>Pi Video Surveillance</title>
+    <title>Cam Scan</title>
     <link rel="stylesheet" type="text/css "href="{% static 'Scan/Scan.css' %}">
 
   </head>
